--- a/index.html
+++ b/index.html
@@ -4,46 +4,56 @@
 <head>
 <!-- Link your CSS stylesheet -->
 <link rel="stylesheet" href="index.css">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Chelsea+Market&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100;300;500&display=swap" rel="stylesheet">
     
 </head>
 <body>
-  <header>
-    <nav>
-      <a href="#">Plan your visit</a>
-      <a href="#">Learn about the park</a>
-      <a href="#">Get involved</a>
-    </nav>
-    <img class="header-circle" src="header_img.jpg" alt="Yosemite">
-    <h1>
-      Yosemite Park Guide
-    </h1>
-    <p>Come explore California’s beautiful wilderness.</p>
-    <p>Always open. Reservations are not available or required to enter the park.</p>
-  </header>
+  <div class="main-container">
+    <header>
+      <nav>
+        <ul>
+          <a href="#">Plan your visit</a>
+          <a href="#">Learn about the park</a>
+          <a href="#">Get involved</a>
+        </ul>
+      </nav>
+      <img class="header-circle" src="header_img.jpg" alt="Yosemite">
+      <h1>
+        Yosemite Park Guide
+      </h1>
+      <p>Come explore California’s beautiful wilderness.</p>
+      <p>Always open. Reservations are not available or required to enter the park.</p>
+    </header>
 
-  <section class="about">
-    <p class="about-p">Not just a great valley, but a shrine to human foresight, the strength of granite, the power of glaciers, the persistence of life, and the tranquility of the High Sierra.</p>
-    <p class="about-p">First protected in 1864, Yosemite National Park is best known for its waterfalls, but within its nearly 1,200 square miles, you can find deep valleys, grand meadows, ancient giant sequoias, a vast wilderness area, and much more.</p>
-  </section>
+    <section class="about">
+      <p class="about-p">Not just a great valley, but a shrine to human foresight, the strength of granite, the power of glaciers, the persistence of life, and the tranquility of the High Sierra.</p>
+      <p class="about-p">First protected in 1864, Yosemite National Park is best known for its waterfalls, but within its nearly 1,200 square miles, you can find deep valleys, grand meadows, ancient giant sequoias, a vast wilderness area, and much more.</p>
+    </section>
 
-  <section class="more-info">
-    <div class="info-container">
-      <img class="icon" src="https://image.flaticon.com/icons/svg/2979/2979348.svg">
-      <p class="info-p">Fire is a natural and essential part of Yosemite. We manage fire carefully and study how it interacts with the park’s ecosystems. This blog provides updates about fires in Yosemite. Check for current fire restrictions.</p>
-    </div>
-    <div class="info-container">
-      <img class="icon" src="https://image.flaticon.com/icons/svg/820/820374.svg">
-      <p class="info-p">We strongly recommend that you make reservations for lodging, camping, and backpacking. You can pay the park entrance fee upon arrival (there's no need to pay it in advance).</p>
-    </div>
-  </section>
+    <section class="more-info">
+      <div class="info-container">
+        <img class="icon" src="https://image.flaticon.com/icons/svg/2979/2979348.svg">
+        <p class="info-p">Fire is a natural and essential part of Yosemite. We manage fire carefully and study how it interacts with the park’s ecosystems. This blog provides updates about fires in Yosemite. Check for current fire restrictions.</p>
+      </div>
+      <div class="info-container">
+        <img class="icon" src="https://image.flaticon.com/icons/svg/820/820374.svg">
+        <p class="info-p">We strongly recommend that you make reservations for lodging, camping, and backpacking. You can pay the park entrance fee upon arrival (there's no need to pay it in advance).</p>
+      </div>
+    </section>
 
-  <footer>
-    <nav>
-      <a href="#">Plan your visit</a>
-      <a href="#">Learn about the park</a>
-      <a href="#">Get involved</a>
-    </nav>
-    <img class="footer-landscape" src="footer_img.jpg" alt="Yosemite half dome">
-  </footer>
+    <footer>
+      <nav>
+        <ul>
+          <a href="#">Plan your visit</a>
+          <a href="#">Learn about the park</a>
+          <a href="#">Get involved</a>
+        </ul>
+      </nav>
+      <img class="footer-landscape" src="footer_img.jpg" alt="Yosemite half dome">
+    </footer>
+  </div>  
 </body>
 </html>
