--- a/index.html
+++ b/index.html
@@ -20,12 +20,18 @@
           <a href="#">Get involved</a>
         </ul>
       </nav>
-      <img class="header-circle" src="header_img.jpg" alt="Yosemite">
-      <h1>
-        Yosemite Park Guide
-      </h1>
-      <p>Come explore California’s beautiful wilderness.</p>
-      <p>Always open. Reservations are not available or required to enter the park.</p>
+      <div class="hero">
+        <div>
+          <img class="header-circle" src="assets/header_img.jpg" alt="Yosemite">
+        </div>
+        <div class="hero-info">
+        <h1>
+          Yosemite Park Guide
+        </h1>
+        <p class="hero-p">Come explore California’s beautiful wilderness.</p>
+        <p class="hero-p-bottom"> Always open. Reservations are not available or required to enter the park.</p>
+        </div>
+      </div>  
     </header>
 
     <section class="about">
@@ -36,15 +42,16 @@
     <section class="more-info">
       <div class="info-container">
         <img class="icon" src="https://image.flaticon.com/icons/svg/2979/2979348.svg">
-        <p class="info-p">Fire is a natural and essential part of Yosemite. We manage fire carefully and study how it interacts with the park’s ecosystems. This blog provides updates about fires in Yosemite. Check for current fire restrictions.</p>
+        <p class="info-p">Fire is a natural and essential part of Yosemite. We manage fire carefully and study how it interacts with the park’s ecosystems. This blog provides updates about fires in Yosemite. Check for current <strong>fire restrictions</strong>.</p>
       </div>
       <div class="info-container">
         <img class="icon" src="https://image.flaticon.com/icons/svg/820/820374.svg">
-        <p class="info-p">We strongly recommend that you make reservations for lodging, camping, and backpacking. You can pay the park entrance fee upon arrival (there's no need to pay it in advance).</p>
+        <p class="info-p">We strongly recommend that you make reservations for lodging, camping, and backpacking. You can pay the <strong>entrance fee</strong>  upon arrival (there's no need to pay it in advance).</p>
       </div>
     </section>
 
     <footer>
+      <img class="footer-landscape" src="assets/footer_img.jpg" alt="Yosemite half dome">
       <nav>
         <ul>
           <a href="#">Plan your visit</a>
@@ -52,7 +59,6 @@
           <a href="#">Get involved</a>
         </ul>
       </nav>
-      <img class="footer-landscape" src="footer_img.jpg" alt="Yosemite half dome">
     </footer>
   </div>  
 </body>
