--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
           <img class="header-circle" src="assets/header_img.jpg" alt="Yosemite">
         </div>
         <div class="hero-info">
-        <h1>
+          <h1>
           Yosemite Park Guide
-        </h1>
-        <p class="hero-p">Come explore California’s beautiful wilderness.</p>
+          </h1>
+          <p class="hero-p">Come explore California’s beautiful wilderness.</p>
         <p class="hero-p-bottom"> Always open. Reservations are not available or required to enter the park.</p>
         </div>
       </div>  
@@ -51,7 +51,7 @@
     </section>
 
     <footer>
-      <img class="footer-landscape" src="assets/footer_img.jpg" alt="Yosemite half dome">
+      <img class="footer-landscape" src="/assets/footer_img.jpg" alt="Yosemite half dome">
       <nav>
         <ul>
           <a href="#">Plan your visit</a>
