--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Chelsea+Market&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100;300;500&display=swap" rel="stylesheet">
+<link rel="icon" href="/assets/favicon.ico">
+
     
 </head>
 <body>
